fix the height of collapse button in collapsible searchfield

--- a/src/components/toolbar-flex/_toolbar-flex-searchfield-new.scss
+++ b/src/components/toolbar-flex/_toolbar-flex-searchfield-new.scss
@@ -12,7 +12,7 @@
 
 @include respond-to(phone) {
   .toolbar-section {
-    .searchfield-wrapper {
+    .searchfield-wrapper.non-collapsible {
       &.is-open {
         .collapse-button {
           height: 38px;
